--- a/app/blocks/map/map.scss
+++ b/app/blocks/map/map.scss
@@ -129,3 +129,25 @@
   width: 15px;
   height: 15px;
 }
+
+.map-marker-tooltip {
+  position: absolute;
+  transform: translate3d(-50%, -100%, 0);
+  background: rgba(0, 0, 0, 0.53);
+  border: 1px solid rgba(31, 31, 31, 0.28);
+  border-radius: 20px;
+  text-align: center;
+  line-height: 22px;
+  font-size: 13px;
+  font-weight: 500;
+  color: $nd-color-basic-light;
+  box-sizing: border-box;
+  padding: 0 8px;
+  font-family: $font-main;
+
+  @include rule(font-size, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 13));
+  @include rule(line-height, (xl: 22px, xlg: 22, lg: 22, md: 22, sm: 22));
+  @include rule(padding-left, (xl: 8px, xlg: 8, lg: 8, md: 8, sm: 8));
+  @include rule(padding-right, (xl: 8px, xlg: 8, lg: 8, md: 8, sm: 8));
+  @include rule(border-radius, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
+}
