--- a/app/blocks/modals/modals.scss
+++ b/app/blocks/modals/modals.scss
@@ -8,4 +8,11 @@
   height: 0;
   width: 0;
   pointer-events: none;
+  margin: 0;
+  padding: 0;
+
+  &__fieldset {
+    margin: 0;
+    padding: 0;
+  }
 }
