--- a/app/components/results/nd-results.scss
+++ b/app/components/results/nd-results.scss
@@ -198,6 +198,12 @@
     width: 100%;
     margin-left: 0;
     margin-right: 0;
+    margin-top: 0;
+    padding-top: 0;
+
+    &:not(:first-child) {
+      @include rule(margin-top, (xl: 25px, xlg: 25, lg: 13, md: -30, sm: 15));
+    }
 
     #{$b} {
 
