--- a/app/components/search-map/nd-search-map-v2.pug
+++ b/app/components/search-map/nd-search-map-v2.pug
@@ -5,6 +5,7 @@ mixin nd-search-map-v2(mapid)
         span(data-map-hidden) Full map view
         span(data-map-shown="xl") Close map view
         span(data-map-shown="sm") View list
+      +e.BUTTON.filter.js-map-filter-show Filters
       +e.map(id=(mapid || 'search-map'))
     block
 
