--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -11,7 +11,7 @@ block header
   - var pageClass = ' nd-page_main'
 
 block content
-  - var menuList = [{name: "Общее", href: "#nav-common"}, {name: "Search <b>Old</b>", href: "#nav-search"}, {name: "Rental Summary", href: "#nav-rental-summary"}, {name: "Deal Passport", href: "#nav-deal"}, {name: "Guest Account", href: "#nav-ga"}, {name: "Host Account", href: "#nav-ha"}, {name: "Edit Space", href: "#nav-edit-space"}, {name: "Add Space", href: "#nav-add-space"}, {name: "Popups", href: "#nd-popups"}, {name: "Registration", href: "#nd-registration"},/* {name: "New search and space", href: "#nd-new-search"}, /* {name: "HA - Single Space", href: "#nav-ha-space"}, */];
+  - var menuList = [{name: "Общее", href: "#nav-common"}, {name: "Search <b>Old</b>", href: "#nav-search"}, {name: "Rental Summary", href: "#nav-rental-summary"}, {name: "Deal Passport", href: "#nav-deal"}, {name: "Guest Account", href: "#nav-ga"}, {name: "Host Account", href: "#nav-ha"}, {name: "Edit Space", href: "#nav-edit-space"}, {name: "Add Space", href: "#nav-add-space"}, {name: "Popups", href: "#nd-popups"}, {name: "Registration", href: "#nd-registration"}, {name: "New search and space", href: "#nd-new-search"}, /* {name: "HA - Single Space", href: "#nav-ha-space"}, */];
   - var nav = {menu: menuList, menuLinkCls: ' js-nd-anchor'}
   +nd-page-header._grid._grid_acc
     .nd-container.nd-hide-from-md
@@ -39,7 +39,7 @@ block content
           //-     +nd-link(href="ha-space-messages.html") Spacepool - Host Space - Messages (ha-space-messages.html)
           //-     +nd-link(href="ha-space-manager.html") Spacepool - Host Space - Manager (ha-space-manager.html)
 
-          //- +e.group#nd-new-search
+          +e.group#nd-new-search
             +e.head
               +page-title Search results and one space pages
             +e.list
