--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -232,6 +232,7 @@ $nd-color-payment-border: #e5eef0;
 $nd-color-selection-bg: #eff3fa;
 $nd-color-border6: #d5d7dc;
 $nd-layout-scroll: #b8babe;
+$nd-modal-output-placeholder: #555e68;
 
 // ##########
 // Transitions
@@ -267,3 +268,8 @@ $icon-angle-arrow-back: url('../images/bg/bg-angle-back.svg');
 $icon-angle-arrow-next: url('../images/bg/bg-angle-next.svg');
 $icon-angle-small-next: url('../images/bg/bg-angle-small-next.svg');
 $icon-double-check: url('../images/bg/bg-double-blue-check.svg');
+$icon-team: url('../images/bg/bg-search-team.svg');
+$icon-location: url('../images/bg/bg-search-location.svg');
+$icon-type: url('../images/bg/bg-search-type.svg');
+$icon-type2: url('../images/bg/bg-search-type-cube.svg');
+$icon-filter: url('../images/bg/bg-filter.svg');
