--- a/app/blocks/filter-section/filter-section.pug
+++ b/app/blocks/filter-section/filter-section.pug
@@ -2,11 +2,11 @@ mixin filter-section(data)
   +b.filter-section&attributes(attributes)
     +e.group(class=(data.groupClass || ''))
       +e.item
-        +modal-output({placeholder: 'Price range'})._rounded.js-toggle-modal(data-modal-target="filter-range" data-modal-output-type="range")
+        +modal-output({placeholder: 'Price range'}).js-toggle-modal(data-modal-target="filter-range" data-modal-output-type="range")
       +e.item
-        +modal-output({placeholder: 'Available from'})._rounded.js-toggle-modal(data-modal-target="filter-available" data-modal-output-type="available")
+        +modal-output({placeholder: 'Available from'}).js-toggle-modal(data-modal-target="filter-available" data-modal-output-type="available")
       +e.item
-        +modal-output({placeholder: 'Total floor area'})._rounded.js-toggle-modal(data-modal-target="filter-area" data-modal-output-type="area-size")
+        +modal-output({placeholder: 'Total floor area'}).js-toggle-modal(data-modal-target="filter-area" data-modal-output-type="area-size")
     +e.item
-      +modal-output({placeholder: 'Sort by'})._rounded.js-toggle-modal(data-modal-target="filter-sort" data-modal-output-type="sort" class=(data.sortClass || ''))
+      +modal-output({placeholder: 'Sort by'}).js-toggle-modal(data-modal-target="filter-sort" data-modal-output-type="sort" class=(data.sortClass || ''))
     block
