--- a/app/pages/search/search-v2.pug
+++ b/app/pages/search/search-v2.pug
@@ -27,15 +27,15 @@ block content
 
       +nd-section.md-only-visibility-hidden
         +nd-section-header
-          +nd-section-title._fz30 Office spaces in London
+          +nd-section-title._fz30._sm-fz22._ls-015 Office spaces in London
           +e.filter-group
-            +e.text_fz15._gray Looking for workspace type, Any team size and Any price
+            +e.text_fz15._ls0._gray Looking for workspace type, Any team size and Any price
             +filter-section({groupClass: 'nd-hide-sm'})(form="search-filter")
 
       +nd-results._v2
         each item in getData('new-nd-spaces-search.json')
           +nd-results-item
-            +nd-space()._search-card.js-show-layout(data-layout-target="space")
+            +nd-space()._search-card._search-card_v2.js-show-layout(data-layout-target="space")
               +gallery(item.gallery)._space.__media.js-nd-gallery
               +e.describe
                 +e.address
@@ -43,8 +43,9 @@ block content
                     span!= el
                 +e.title!=item.title
                 +e.clip-text
-                  +e.text(data-text=item.text)!=item.text
-                +offer-table(item.offers)._transforma.__list
+                  +e.text!=item.text
+              +e.offer-list
+                +offer-table(item.offers)._transforma._transforma_v2.__list
               +e.button.hide-from-sm View all 20 listings
 
     +e.column_start._popup(data-layout-tag="space")
@@ -53,8 +54,8 @@ block content
 
     +e.column_start._popup(data-layout-tag="offer")
 
-  +modals('form')#search-filter(action="/")
-    +e.FIELDSET.fieldset
+  +modals('div')
+    +e.FORM.fieldset#search-filter(action="/")
       +modal({header: {title: 'Location'}, footer: false})#filter-location
         +e.list
           - var cityList = getData('nd-main-search-cities.json');
@@ -68,20 +69,23 @@ block content
                 +e.SPAN.content!=item.title
       +modal({header: {title: 'Office type'}, describe: 'Pick the type of workspace you want.', footer: false})#filter-type
         +e.list
-          each item in [{title: 'Private Office', value: 'Private Office', name: 'team', value2: 'Private Office', class: "_offer_green"}, {title: 'Hot Desk', value: 'Hot Desk', name: 'team', value2: 'Hot Desk', class: "_offer_orange"}, {title: 'Fixed Desk', value: 'Fixed Desk', name: 'team', value2: 'Fixed Desk', class: "_offer_red"}, {title: 'Meeting Room', value: 'Meeting Room', name: 'team', value2: 'Meeting Room', class: "_offer_blue"}]
+          each item in [{title: 'Private Office', value: 'Private Office', name: 'team', value2: 'Private Office', class: "_offer_green", wrapClass: 'is-green'}, {title: 'Hot Desk', value: 'Hot Desk', name: 'team', value2: 'Hot Desk', class: "_offer_orange", wrapClass: 'is-orange'}, {title: 'Fixed Desk', value: 'Fixed Desk', name: 'team', value2: 'Fixed Desk', class: "_offer_red", wrapClass: 'is-red'}, {title: 'Meeting Room', value: 'Meeting Room', name: 'team', value2: 'Meeting Room', class: "_offer_blue", wrapClass: 'is-blue'}]
             +styled-radio(item.title)._offer(class=item.class + ' __item')
-              +e.INPUT.input(type="radio", value=item.value, name=item.name, data-modal-item, data-modal-item-value=item.value2, data-modal-item-type="offer")
+              if (item.checked)
+                +e.INPUT.input(type="radio", value=item.value, name=item.name, data-modal-item, data-modal-item-value=item.value2, data-modal-item-wrapper-class=item.wrapClass data-modal-item-type="offer", checked)
+              else
+                +e.INPUT.input(type="radio", value=item.value, name=item.name, data-modal-item, data-modal-item-value=item.value2, data-modal-item-wrapper-class=item.wrapClass data-modal-item-type="offer")
       +modal({header: {title: 'Team size'}, describe: 'Start-up, scale-up, big business or just you – we have a perfect match for you.', footer: false})#filter-team
         +e.list
           each item in [{title: '1', value: '1', name: 'team', value2: '1'}, {title: '2 — 4', value: '2 — 4', name: 'team'}, {title: '5 — 7', value: '5 — 7', name: 'team'}, {title: '8 — 10', value: '8 — 10', name: 'team'}, {title: '11 — 15', value: '11 — 15', name: 'team'}, {title: '16 — 20', value: '16 — 20', name: 'team'}, {title: '21 — 30', value: '21 — 30', name: 'team'}, {title: '31+', value: '31+', name: 'team', value2: '31+'} ]
             +styled-radio(item.title)._team.__item
               +e.INPUT.input(type="radio", value=item.value, name=item.name, data-modal-item, data-modal-item-value=(item.value2 || item.value), data-modal-item-type="team")
-    +e.FIELDSET.fieldset
+    +e.fieldset
       +modal({header: {title: 'Price range'}, footer: {class: '_range', view: 'range'}})#filter-range
-        +nd-range({output: {minLabel: 'Min', maxLabel: 'Max', max: 'maxPrice', min: 'minPrice', formboxClass: '_bg-white _sm-h50', inputClass: '_sm-h50'}})(data-start="[0, 5000]" data-connect="[false, true, false]" data-step="10" data-margin="30" data-min="0" data-max="10000" data-currency="£" data-nd-filter-type="priceRange").__range
+        +nd-range({output: {minLabel: 'Min', maxLabel: 'Max', max: 'maxPrice', min: 'minPrice', formboxClass: '_bg-white _sm-h50', inputClass: '_sm-h50'}})(data-start="[0, 5000]" data-connect="[false, true, false]" data-step="10" data-margin="30" data-min="0" data-max="10000" data-currency="£" data-modal-item data-modal-item-type="range").__range
       +modal({header: {title: 'Sort by'}, footer: false})#filter-sort
         +e.list
-          each item in [{title: 'Popular', value: 'Popular', name: 'sort', checked: true}, {title: 'Relevance', value: 'Relevance', name: 'sort'}, {title: 'Price ascending', value: 'Price ascending', name: 'sort'}, {title: 'Price descending', value: 'Price descending', name: 'sort'}]
+          each item in [{title: 'Popular', value: 'Popular', name: 'sort', /*checked: true*/}, {title: 'Relevance', value: 'Relevance', name: 'sort'}, {title: 'Price ascending', value: 'Price ascending', name: 'sort'}, {title: 'Price descending', value: 'Price descending', name: 'sort'}]
             +styled-radio(item.title)._sort.__item
               if item.checked
                 +e.INPUT.input(type="radio", value=item.value, name=item.name, data-modal-item, data-modal-item-value=(item.value), data-modal-item-type="sort" checked)
